--- a/public/global.css
+++ b/public/global.css
@@ -4,11 +4,15 @@ html, body {
 	height: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
-	color: #333;
+	color: white;
 	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
+	padding: 0;
+  background-color: #333;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
